fix: correct text color variables in CSS for consistency and readability

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
     --bg-secondary: #252525;
     --color-primary: #0A77F3;
     --text: #ffffff;
-    --text-secondary: #A3A3A3;
-    --text-terceary: #dcdcdc;
+    --text-secondary: #dcdcdc;
+    --text-terceary: #a3a3a3;
     --border: #3d3d3d;
 
     --hover-border: #0A77F3;
@@ -21,8 +21,8 @@
   --bg: #f5f5f5;
   --bg-secondary: #Fbfbfb;
   --text: #1d1d1d;
-  --text-secondary: #A3A3A3;
-  --text-terceary: #3d3d3d;
+  --text-secondary: #3d3d3d;
+  --text-terceary: #797979;
   --border: #DCDCDC;
 
   --hover-border: #0A77F3;
